--- a/Application/SolutionMoneyManager/MoneyManagerDesktop/MoneyManagerDesktop.csproj
+++ b/Application/SolutionMoneyManager/MoneyManagerDesktop/MoneyManagerDesktop.csproj
@@ -86,6 +86,7 @@
       <DependentUpon>frmColor.cs</DependentUpon>
     </Compile>
     <Compile Include="AppConfigXML.cs" />
+    <Compile Include="Forms\Connection\clsConnection.cs" />
     <Compile Include="Forms\Connection\resConnection.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
