Update Form Users
Beta1 Form Users

--- a/Application/SolutionMoneyManager/MoneyManagerDesktop/MoneyManagerDesktop.csproj
+++ b/Application/SolutionMoneyManager/MoneyManagerDesktop/MoneyManagerDesktop.csproj
@@ -91,6 +91,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>resConnection.resx</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Login\clsLogin.cs" />
     <Compile Include="Forms\Login\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
