--- a/Application/SolutionMoneyManager/MoneyManagerDesktop/MoneyManagerDesktop.csproj
+++ b/Application/SolutionMoneyManager/MoneyManagerDesktop/MoneyManagerDesktop.csproj
@@ -68,45 +68,45 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forms\About\ResAbout.Designer.cs">
+    <Compile Include="Forms\About\RessAbout.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ResAbout.resx</DependentUpon>
+      <DependentUpon>RessAbout.resx</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Color\FrmColor.cs">
+    <Compile Include="Forms\Color\FrmmColor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Color\FrmColor.Designer.cs">
-      <DependentUpon>FrmColor.cs</DependentUpon>
+    <Compile Include="Forms\Color\FrmmColor.Designer.cs">
+      <DependentUpon>FrmmColor.cs</DependentUpon>
     </Compile>
     <Compile Include="AppConfigXML.cs" />
-    <Compile Include="Forms\Color\ResColor.Designer.cs">
+    <Compile Include="Forms\Color\RessColor.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ResColor.resx</DependentUpon>
+      <DependentUpon>RessColor.resx</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Connection\ClsConnection.cs" />
-    <Compile Include="Forms\Connection\ResConnection.Designer.cs">
+    <Compile Include="Forms\Connection\ClssConnection.cs" />
+    <Compile Include="Forms\Connection\RessConnection.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ResConnection.resx</DependentUpon>
+      <DependentUpon>RessConnection.resx</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Login\ClsLogin.cs" />
-    <Compile Include="Forms\Login\FrmLogin.cs">
+    <Compile Include="Forms\Login\ClssLogin.cs" />
+    <Compile Include="Forms\Login\FrmmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Login\FrmLogin.Designer.cs">
-      <DependentUpon>FrmLogin.cs</DependentUpon>
+    <Compile Include="Forms\Login\FrmmLogin.Designer.cs">
+      <DependentUpon>FrmmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Login\ResLogin.Designer.cs">
+    <Compile Include="Forms\Login\RessLogin.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ResLogin.resx</DependentUpon>
+      <DependentUpon>RessLogin.resx</DependentUpon>
     </Compile>
-    <Compile Include="Forms\MainBase\ResMainBase.Designer.cs">
+    <Compile Include="Forms\MainBase\RessMainBase.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ResMainBase.resx</DependentUpon>
+      <DependentUpon>RessMainBase.resx</DependentUpon>
     </Compile>
     <Compile Include="Forms\Users\ClsUsers.cs" />
     <Compile Include="Forms\Users\FrmUsers.cs">
@@ -121,66 +121,66 @@
     <Compile Include="Forms\MainBase\FrmMainBase.Designer.cs">
       <DependentUpon>FrmMainBase.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\About\FrmAbout.cs">
+    <Compile Include="Forms\About\FrmmAbout.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\About\FrmAbout.Designer.cs">
-      <DependentUpon>FrmAbout.cs</DependentUpon>
+    <Compile Include="Forms\About\FrmmAbout.Designer.cs">
+      <DependentUpon>FrmmAbout.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Connection\FrmConnection.cs">
+    <Compile Include="Forms\Connection\FrmmConnection.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Connection\FrmConnection.Designer.cs">
-      <DependentUpon>FrmConnection.cs</DependentUpon>
+    <Compile Include="Forms\Connection\FrmmConnection.Designer.cs">
+      <DependentUpon>FrmmConnection.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Users\ResUsers.Designer.cs">
+    <Compile Include="Forms\Users\RessUsers.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ResUsers.resx</DependentUpon>
+      <DependentUpon>RessUsers.resx</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Forms\About\ResAbout.resx">
+    <EmbeddedResource Include="Forms\About\RessAbout.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ResAbout.Designer.cs</LastGenOutput>
+      <LastGenOutput>RessAbout.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Color\FrmColor.resx">
-      <DependentUpon>FrmColor.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Color\FrmmColor.resx">
+      <DependentUpon>FrmmColor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Color\ResColor.resx">
+    <EmbeddedResource Include="Forms\Color\RessColor.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ResColor.Designer.cs</LastGenOutput>
+      <LastGenOutput>RessColor.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Connection\FrmConnection.resx">
-      <DependentUpon>FrmConnection.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Connection\FrmmConnection.resx">
+      <DependentUpon>FrmmConnection.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Connection\ResConnection.resx">
+    <EmbeddedResource Include="Forms\Connection\RessConnection.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ResConnection.Designer.cs</LastGenOutput>
+      <LastGenOutput>RessConnection.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Login\FrmLogin.resx">
-      <DependentUpon>FrmLogin.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Login\FrmmLogin.resx">
+      <DependentUpon>FrmmLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Login\ResLogin.resx">
+    <EmbeddedResource Include="Forms\Login\RessLogin.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ResLogin.Designer.cs</LastGenOutput>
+      <LastGenOutput>RessLogin.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainBase\FrmMainBase.resx">
       <DependentUpon>FrmMainBase.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\MainBase\ResMainBase.resx">
+    <EmbeddedResource Include="Forms\MainBase\RessMainBase.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ResMainBase.Designer.cs</LastGenOutput>
+      <LastGenOutput>RessMainBase.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Users\FrmUsers.resx">
       <DependentUpon>FrmUsers.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\About\FrmAbout.resx">
-      <DependentUpon>FrmAbout.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\About\FrmmAbout.resx">
+      <DependentUpon>FrmmAbout.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Users\ResUsers.resx">
+    <EmbeddedResource Include="Forms\Users\RessUsers.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ResUsers.Designer.cs</LastGenOutput>
+      <LastGenOutput>RessUsers.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
